test/constrained-generics/ucol/cwailes-1/confused-arg-error.good
confused-arg-error.chpl:3: error: the required function formal's name 'T' is the same as the interface formal's name
confused-arg-error.chpl:2: note: the interface I is declared here
